--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                             </div>
                             <button class="btn btn-success">Submit</button>
                             <button class="btn btn-success">Reset</button>
+                            <a href="home.html"> link for homepage</a>
                         </form>
                         
                      </div>
